@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

class "Parser" <<static>> {
    - {static} getValue(String args, String prefix) : String
    - {static} getOptionalValue(String args, String prefix) : String
    - {static} findNextPrefixIndex(String args, int start) : int
    + {static} returnFirstWord(String input) : String
    + {static} parseAddExpense(String input) : Expense
    + {static} parseAddIncome(String input) : Income
    + {static} parseDeleteExpense(String input) : int
    + {static} parseModifyExpense(String input) : Map.Entry<Integer, Expense>
    + {static} parseBudget(String input) : Map.Entry<ExpenseCategory, Double>
    + {static} parseExport(String input) : Path
}

class Expense {
    + Expense(String name, double amount, ExpenseCategory cat, LocalDate date, String des)
}
class Income {
    + Income(String name, double amount, IncomeCategory cat, LocalDate date, String des)
}
class "ExpenseCategory" <<enum>> {
    + {static} parse(String s) : ExpenseCategory
}
class "LocalDate" <<JDK>> {
    + {static} parse(String s) : LocalDate
}

"Parser" ..> Expense : <<creates>>
"Parser" ..> Income : <<creates>>
"Parser" ..> "ExpenseCategory" : <<uses>>
"Parser" ..> "LocalDate" : <<uses>>
@enduml